# recordit

./: .gitattributes  .gitignore  Cargo.toml  LIVE_TRANS.md  Makefile  README.md  dev-gui.bat  record.bat  record.ps1
.beads/: issues.jsonl
.cargo/: config.toml
Recordit.xcodeproj/: project.pbxproj
contracts/: readiness-contract-ids.v1.json  recordit-cli-contract.v1.json  recordit-exit-code-contract.v1.json  runtime-jsonl.schema.v1.json  runtime-mode-matrix.v1.json  session-manifest.schema.v1.json
docs/: adr-004-packaged-entrypoint.md  adr-005-recordit-default-entrypoint.md  agent-contract-index.md  architecture-swiftui-module-map.md  architecture.md  bd-11vg-critical-surface-gap-report.md  bd-125h-deferred-notifications.md  bd-12fg-sessions-ui.md  bd-13kc-compat-shim.md  bd-14y4-sequoiatranscribe-fallback-policy.md  bd-19iv-permission-remediation.md  bd-1a25-jsonl-tailer.md  bd-1aqk-first-run-onboarding-xcuitest.md  bd-1e1h-runtime-wiring-closeout.md  bd-1g73-manifest-status-mapper.md  bd-1jc9-mock-exception-scanner.md  bd-1k50-nightly-rc-gating-policy.md  bd-1m3z-pending-transcribe-action.md  bd-1m6o-di-environment.md  bd-1tuy-diagnostics-redaction.md  bd-1ud0-accessibility-bindings.md  bd-1uik-ga-signing-notarization-plan.md  bd-1vo3-gatekeeper-notarization-expectations.md  bd-20r2-readiness-id-migration.md  bd-20uu-main-session-view.md  bd-2ak3-rollout-migration-deprecation-checklist.md  bd-2ghc-session-summary-artifact-actions-xcuitest.md  bd-2grd-e2e-evidence-contract.md  bd-2grd-shared-helper-adoption.md  bd-2hnd-service-interfaces.md  bd-2hxr-export-ux-flows.md  bd-2i3h-sessions-list-ui.md  bd-2iuz-responsiveness-budgets.md  bd-2j6l-export-framework.md  bd-2jhd-runtime-state-machine.md  bd-2jsx-runtime-binary-readiness.md  bd-2mbp-critical-path-exception-register.csv  bd-2mbp-no-mock-critical-path-policy.md  (+84 more)
(+221 files in other folders)
