[package]
name = "recordit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ctrlc = "3.4.7"
crossbeam-channel = "0.5.15"
hound = "3.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
screencapturekit = { version = "1.5.1", features = ["macos_15_0"] }

[[bin]]
name = "transcribe-live"
path = "src/bin/transcribe_live.rs"
