[package]
name = "recordit"
version = "0.1.0"
edition = "2024"

[features]
# Enable macOS-only diagnostic probe binaries (capture_probe, sck_probe).
# These require ScreenCaptureKit and only compile/run on macOS 15+.
macos-tools = []

[dependencies]
anyhow = "1.0.100"
ctrlc = { version = "3.4.7", features = ["termination"] }
crossbeam-channel = "0.5.15"
hound = "3.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "1.5.1", features = ["macos_15_0"] }

[target.'cfg(target_os = "windows")'.dependencies]
# WASAPI loopback + mic capture via windows-rs (no cpal needed — WASAPI used directly)
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Devices_Properties",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Security",
] }

[[bin]]
name = "transcribe-live"
path = "src/bin/transcribe_live.rs"

[[bin]]
name = "capture-probe"
path = "src/bin/capture_probe.rs"
required-features = ["macos-tools"]

[[bin]]
name = "sck-probe"
path = "src/bin/sck_probe.rs"
required-features = ["macos-tools"]
